--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: 'TikTokFont', sans-serif;
     min-width: 100px;
     padding: 9px 16px;
     border: 1px solid transparent;
@@ -75,7 +76,9 @@
 
 // Icon
 .icon {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 20px;
     text-align: center;
 }
