--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,4 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --primary: #fe2c55;
@@ -24,7 +23,7 @@ html {
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'TikTokFont', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -41,6 +40,31 @@ input,
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// Font embeded
+@font-face {
+    font-family: TikTokFont;
+    src: url(/assets/fonts/TikTokFont-Regular.woff2);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: TikTokFont;
+    src: url(/assets/fonts/TikTokFont-Semibold.woff2);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: TikTokFont;
+    src: url(/assets/fonts/TikTokFont-Bold.woff2);
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: TikTokDisplayFont;
+    src: url(/assets/fonts/TikTokDisplayFont-Bold.woff2);
+    font-weight: 700;
 }
 
 // Custom Tippy Tooltip Styles
