--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -102,11 +102,27 @@
 }
 
 .action-btn {
+    position: relative;
     color: #161823;
     font-size: 2.2rem;
     padding: 4px 16px;
     background-color: transparent;
     cursor: pointer;
+}
+
+.count {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    width: 22px;
+    height: 16px;
+    border-radius: 999px;
+    background-color: var(--primary);
+    color: var(--white);
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .user-avatar {
