--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     font-size: 1.6rem;
     font-weight: 700;
-    font-family: 'TikTokFont', sans-serif;
+    font-family: var(--font-family);
     min-width: 100px;
     padding: 9px 16px;
     border: 1px solid transparent;
