--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -19,6 +19,7 @@
         font-family: var(--font-family);
         background-color: transparent;
         caret-color: var(--primary);
+        padding-right: 40px;
     }
 
     input:not(:placeholder-shown) ~ .search-btn {
@@ -91,5 +92,11 @@
 
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .search {
+        display: none;
     }
 }
